sfdx/force-app/main/default/objects/Voice_Write_Log__c/Voice_Write_Log__c.object-meta.xml
<CustomObject>
    <description>Idempotency ledger for voice-originated writes. Objects such as FeedItem cannot carry a custom External ID field, so a ledger row is upserted first: created means proceed, already-present means the command is a replay and the write is skipped.</description>
    <label>Voice Write Log</label>
    <nameField>
        <displayFormat>VWL-{00000000}</displayFormat>
        <label>Voice Write Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Write Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>