sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <label>Idempotency Key</label>
    <description>Unique + External ID. Upserting on this field is what makes a replayed voice command inert for writes that cannot carry their own key.</description>
    <externalId>true</externalId>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>