sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <description>Tool name that issued the write, for auditing which voice command produced a record.</description>
    <length>64</length>
    <type>Text</type>
</CustomField>