sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Previous_Values__c.field-meta.xml
<CustomField>
    <fullName>Previous_Values__c</fullName>
    <label>Previous Values</label>
    <description>The fields this write changed, in their pre-write form, as JSON. Undo reads this; without it a mis-heard value is unrecoverable.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>