sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Result_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Result_Record_Id__c</fullName>
    <label>Result Record Id</label>
    <description>Record the write produced, for example the FeedItem id of a Chatter post. Lets a replay report what the original call created.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>