sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>System that produced the write, so companion changes stay identifiable once writes are attributed to the rep rather than an integration user.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>