sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <label>Target Record Id</label>
    <description>Record the write was aimed at, for example the Opportunity a Chatter post was attached to.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>