sfdx/force-app/main/default/objects/Voice_Write_Log__c/fields/Undone__c.field-meta.xml
<CustomField>
    <fullName>Undone__c</fullName>
    <label>Undone</label>
    <description>Set when this write has been reversed. Undo refuses an already-undone row rather than walking further back, so a repeated "undo" over road noise is inert.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>